[package]
name = "json_sorter"
version = "0.1.0"
authors = ["Yann PETIT <public@ypetit.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
serde = { version = "1.0.115" , features = ["derive"] }
serde_json = "1.0.57"